--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -67,7 +67,7 @@
             didactic practices.
           </p>
 
-          <button class="readmore-btn">READ MORE</button>
+          <button class="btn_xs btn_xs-primary">READ MORE</button>
         </div>
 
         <!-- Decorative Images -->
