--- a/public/assets/styles/colors.scss
+++ b/public/assets/styles/colors.scss
@@ -1,46 +1,53 @@
-$primary500:#870B0F;
-$primary400:#BE0F16;
-$primary300:#ED1C24;
-$primary200:#F3686D;
-$primary100:#F9B3B6;
+$primary500: #870B0F;
+$primary400: #BE0F16;
+$primary300: #ED1C24;
+$primary200: #F3686D;
+$primary100: #F9B3B6;
 
-$primaryAlpha10:#ed1c231a;
-$primaryAlpha50:#ed1c2380;
-$primaryAlpha80:#ed1c23cc;
+$primaryAlpha10: #ed1c231a;
+$primaryAlpha50: #ed1c2380;
+$primaryAlpha80: #ed1c23cc;
 
-$secondary100:#F4F4F4;
-$secondary200:#DBDBDB;
-$secondary300:#A9A9A9;
-$secondary400:#727272;
-$secondary500:#424242;
+$secondary100: #F4F4F4;
+$secondary200: #DBDBDB;
+$secondary300: #A9A9A9;
+$secondary400: #727272;
+$secondary500: #424242;
 
-$secondaryAlpha5:#f4f4f40d;
-$secondaryAlpha10:#f4f4f41a;
-$secondaryAlpha50:#f4f4f480;
+$secondaryAlpha5: #f4f4f40d;
+$secondaryAlpha10: #f4f4f41a;
+$secondaryAlpha50: #f4f4f480;
 
-$accent100:#C3DAF5;
-$accent100:#86B5EC;
-$accent100:#4A90E2;
-$accent100:#1565C0;
-$accent100:#134075;
+$accent100: #C3DAF5;
+$accent100: #86B5EC;
+$accent100: #4A90E2;
+$accent100: #1565C0;
+$accent100: #134075;
 
-$accentAlpha10:#4a90e21a;
-$accentAlpha10:#4a90e280;
+$accentAlpha10: #4a90e21a;
+$accentAlpha10: #4a90e280;
 
-$neutral100:#FFFFFF;
-$neutral200:#E8E8E8;
-$neutral300:#D2D2D2;
-$neutral400:#BBBBBB;
-$neutral500:#A4A4A4;
-$neutral600:#8E8E8E;
-$neutral700:#777777;
-$neutral800:#606060;
-$neutral900:#4A4A4A;
-$neutral1000:#000000;
+$neutral100: #FFFFFF;
+$neutral200: #E8E8E8;
+$neutral300: #D2D2D2;
+$neutral400: #BBBBBB;
+$neutral500: #A4A4A4;
+$neutral600: #8E8E8E;
+$neutral700: #777777;
+$neutral800: #606060;
+$neutral900: #4A4A4A;
+$neutral1000: #000000;
 
-$neutralAlpha10:#0000001a;
-$neutralAlpha50:#00000080;
+$neutralAlpha10: #0000001a;
+$neutralAlpha50: #00000080;
 
 /* -- Figma Colors -- */
 
-$container:#130D0D;
+$container: #130D0D;
+
+$primary: rgba(237, 28, 36, 1);
+$primaryDark: rgba(135, 11, 15, 1);
+$secondary: rgba(244, 244, 244, 1);
+$neutral: rgba(232, 232, 232, 1);
+$outline-white: rgba(255, 255, 255, 1);
+$white: rgba(255, 255, 255, 1);
