about us change

--- a/src/app/pages/company/about-us/about-us.html
+++ b/src/app/pages/company/about-us/about-us.html
@@ -4,7 +4,7 @@
   <section class="hero-section">
     <div class="hero-content">
       <span class="badge">Since 1994</span>
-      <h1>HYTEC POWER INCORPORATED</h1>
+      <h1>HYTEC A POWER INCORPORATED</h1>
       <p class="subtitle">Empowering Industrial and Educational Solutions for Over 30 years</p>
     </div>
   </section>
@@ -204,7 +204,7 @@
 
     </div>
   </div>
-  
+
   <div class="attributes">
     <div class="contents">
       <img src="assets/images/aboutus/ceo/goal.png" alt="">
