--- a/src/app/pages/company/about-us/about-us.html
+++ b/src/app/pages/company/about-us/about-us.html
@@ -4,7 +4,7 @@
   <section class="hero-section">
     <div class="hero-content">
       <span class="badge">Since 1994</span>
-      <h1>HYTEC A POWER INCORPORATED</h1>
+      <h1>HYTEC AA POWER INCORPORATED</h1>
       <p class="subtitle">Empowering Industrial and Educational Solutions for Over 30 years</p>
     </div>
   </section>
