--- a/src/app/pages/company/about-us/about-us.scss
+++ b/src/app/pages/company/about-us/about-us.scss
@@ -3,7 +3,7 @@
 
 :host {
   display: block;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bebas', sans-serif;
   color: white;
   background: linear-gradient(180deg,
       rgba(80, 0, 0, 0.25) 0%,
