--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -448,6 +448,8 @@ $breakpoint-desktop: 1440px;
   }
 }
 
+/* fuck you pinoy nigga albert stop overwriting my code
+
 .who_we_are-description {
   font-weight: 200;
 }
