--- a/src/app/pages/company/about-us/about-us.scss
+++ b/src/app/pages/company/about-us/about-us.scss
@@ -3,7 +3,7 @@
 
 :host {
   display: block;
-  font-family: 'Bebas', sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: white;
   background: linear-gradient(180deg,
       rgba(80, 0, 0, 0.25) 0%,
@@ -335,6 +335,8 @@
   border-color: rgba(255, 0, 0, 0.3);
   transition: all 0.3s ease;
 }
+
+/* fuck you pinoy nigga albert stop overwriting my code
 
 .timeline-dot:hover {
   box-shadow: 0 0 0 6px rgba(255, 0, 0, 0.3);
@@ -893,7 +895,7 @@
 
 /* ⋆｡˚ ୨୧ ˚｡⋆ Our President & CEO ⋆｡˚ ୨୧ ˚｡⋆ */
 
-.content{
+.content {
   position: relative;
   width: 73%;
   height: max-content;
@@ -963,6 +965,7 @@
   }
 
 }
+
 .attributes {
   background-color: color.$secondaryAlpha5;
   border: 1px solid color.$secondaryAlpha10;
@@ -975,7 +978,7 @@
   padding: 7vh 2vw;
   margin-top: 3vh;
 
-  .contents{
+  .contents {
     color: white;
     display: flex;
     flex-direction: column;
@@ -986,18 +989,15 @@
       width: 5.5vw;
     }
 
-    .message{
+    .message {
       display: flex;
       flex-direction: column;
       text-align: center;
-      gap:2vh;
+      gap: 2vh;
 
-      p{
+      p {
         margin: 0;
       }
     }
   }
 }
-
-
-
