Fixing President and CEO bugs

--- a/src/app/pages/company/about-us/about-us.html
+++ b/src/app/pages/company/about-us/about-us.html
@@ -152,17 +152,17 @@
 
 
   @if (tab() == 2) {
-  <div class="title-badge ldisplay">
-    <p class="ldisplay">our president and ceo</p>
+  <div class="title-badge">
+    <p class="xldisplay tab-header">our president and ceo</p>
     <div class="red-bar"></div>
   </div>
-  <p class="mediumTitle white">The man behind the HPI success.</p>
+  <p class="mediumTitle">The man behind the HPI success.</p>
   <div class="content">
     <div class="quote xxldisplay">“</div>
     <div class="ceo">
       <img src="assets/images/aboutus/ceo/CEO.svg" alt="">
     </div>
-    <div class="message-container mediumTitle white">
+    <div class="OPCmessage-container largeBody">
       Engr. Eric Jude S. Soliman or EJSS is the Founder, President, and CEO of Hytec Power Incorporated, one of the
       leadingproviders of educational and industrial solutions in the country. A visionary man, EJSS founded the
       company from scratch in 1994 and lead its stimulating growth for more than 27 years. the venues that were
