President and ceo responsiveness

--- a/src/app/pages/company/about-us/about-us.scss
+++ b/src/app/pages/company/about-us/about-us.scss
@@ -836,6 +836,12 @@
     .ceo {
       display: none;
     }
+    .OPCmessage-container {
+      max-width: 91%;
+      text-wrap: wrap;
+      text-align: justify;
+      margin-left: 3vw;
+    }
   }
 
   .achievements {
